Getting authenticated user when posting for new WebPage creation
